--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-Flask
+blinker==1.6.2
+click==8.1.7
+flask==3.0.0
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+werkzeug==3.0.0
+zipp==3.17.0
+flask_bcrypt
+flask_cors
+flask_sqlalchemy
